--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   http: ^0.13.5
   provider: ^6.0.5
   floor:
-  shared_preferences:
+  shared_preferences: 2.0.13
 
 dev_dependencies:
   flutter_test:
